carousel modification and horizontal scroll fixed

--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,5 +1,5 @@
 footer{
-    width: 100vw;
+    width: 100%;
     background: linear-gradient(#0f1419, #111d29);
     height: auto;
     padding: 20px;
